# crabhole

./: .gitignore  README.md  bun.lockb  demo.txt  package.json  vercel.json
cli/: Cargo.toml  sample_caps.dart
cli/src/: main.rs  main.rs.better  main.rs.old
client/: index.html
host/: Cargo.toml  typescript
host/rustyline-async/: Cargo.toml
host/rustyline-async/src/: line.rs
host/src/: main.rs  term.rs
server/: Dockerfile  biome.json  bun.lockb  client.ts  fly.toml  index.html  index.ts  package.json  tsconfig.json
server/webscripts/: socket.io.js
whumpushole/: Cargo.toml
whumpushole/src/: main.rs
