[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
libc = "0.2.164"
nix = "0.29.0"
portable-pty = "0.8.1"
pty = "0.2.2"
termwiz = "0.22.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
