[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.22"
rust_socketio = { version = "0.6.0", features = ["async"] }
rustyline-async = "0.4.4"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
ringbuf = "0.3.3"
