[package]
name = "whumpushole"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serenity = "0.12.4"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
